Added new endpoint for getting engine station properties
